<resources>
    <string name="app_name">Tasbeeh</string>
    <string name="tasbeeh_words">Зикр кўшиш</string>
    <string name="subhanalloh">Субханаллох</string>
    <string name="meaning_subhanalloh">Ma\'nosi: Allohni poklab yod qilaman</string>
    <string name="choose_color">Тасбех рангини танланг</string>

    <string name="enter_arabic_word">Арабча мантнни киритинг!</string>
    <string name="enter_russian_word">Кирилча матнни киритинг!</string>
    <string name="enter_meaning_word">Маъносини киритинг!</string>
    <string name="back">Ортга</string>
    <string name="alhamdulillah">ٱلْحَمْدُ لِلّٰهِ</string>
    <string name="allohu_akbar">اللَّهُ أَكْبَرُ</string>
    <string name="astahfirulloh">أَسْتَغْفِرُ اللّٰهَ</string>
    <string name="astahfirulloh_vaatubu_ilayh">أَسْـتَـغْـفِـرُ اللهَ وَ أَ تُـوبُ إِ لَـْيهِ</string>
    <string name="subhanallohi_va_bihandihi_subhonallohil_aziym">سُبْحَانَ اللّهِ وَ بِحَمْدِهِ ، سُبْحَانَ اللّهِ الْعَظِيمِِ</string>
    <string name="ya_muqollibal_qulub_sabbiy_qolbiy_ala_diynik">يامقلب القلوب ثبت قلبي على دينك</string>
    <string name="la_ilaha_illa_anta_subhanaka_inniy_kuntu_minaz_zolimiyn">لَّآ إِلَٰهَ إِلَّآ أَنتَ سُبْحَٰنَكَ إِنِّى كُنتُ مِنَ ٱلظَّٰلِمِينَ</string>
    <string name="astahfirullohallaziy_la_ilaha_illa_huval_hayyul_qayyum_va_atubu_ilayh">أسْتَغْفِرُ اللهَ الَّذِي لا إلَهَ إلا هُوَ الحَيُّ القَيُومُ وَأتُوبُ إلَيهِ</string>
</resources>